# LeetCodePractice

./: .gitignore  README.md  pyproject.toml
Haizeix/: 0184.py
LCOF/: LowestCommonAncestor_68_II.cpp  Makefile  RepeatingNumInArr_03.cpp
LCOF/src/: AppearanceTimesInArray_56_I.java  AppearanceTimesInArray_56_II.java  ArrangeIntegerArrayToSmallestNumber_45.java  ArrangementOfAString_38.java  BSTAndBidirLinkedList_36.java  BalancedBinaryTree_55_II.java  BestTimeToBuyAndSellStock_63.java  BuildMultiplyingArray_66.java  ConsecutiveIntegersAddedUpToS_57_II.java  CutRope_14_I.java  CutRope_14_II.java  DeleteNodeInLinkedList_18.java  DepthOfBinaryTree_55_I.java  DuplicateComplexLinkedList_35.java  Fibonacci_10_I.java  FindNumberInSortedArrayI_53_I.java  FirstCharacterThatAppearsOnce_50.java  FirstCommonNodeOfTwoLinkedList_52.java  ImplementQueueUsingStacks_09.java  KthLargestNodeOfBST_54.java  LastRemaining_62.java  LeapFrog_10_II.java  LeftRotateString_58_II.java  LowestCommonAncestor_68_I.java  LowestCommonAncestor_68_II.java  MajorityElement_39.java  MaxSumOfSuccessiveSubarray_42.java  MaxValueOfGifts_47.java  MaxValueOfSlidingWindow_59_I.java  MaximumOfAQueue_59_II.java  MedianFinder_41.java  MergeTwoSortedLists_25.java  MinFunctionStack_30.java  MinOfARotatedArray_11.java  MirrorABinaryTree_27.java  MissingNumber_53_II.java  MovingAreaOfARobot_13.java  MyPow_16.java  (+36 more)
Problems/: Haizei_0184.py  Haizei_0186.py  Haizei_0235.py  spiral_matrix_54.py  water_the_plant_ii_2105.py
utils/: __init__.py  lc_tree.h  ser_de_binary_tree.cpp  ser_de_binary_tree.h  utils.py
(+101 files in other folders)
