[tool.poetry]
name = "leetcodepractice"
version = "0.1.0"
description = "python env and package dependencies for practice"
authors = ["wang-zhenqi <dreamingwzq@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[tool.poetry.group.pre-commit.dependencies]
pre-commit = "^3.8.0"
black = "^24.8.0"
flake8 = "^7.1"
isort = "^5.13"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
